--- a/app/public/index.html
+++ b/app/public/index.html
@@ -20,7 +20,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <script src="https://use.fontawesome.com/60c2487ed8.js"></script>
-    <title>React App</title>
+    <title>Hardin County Armory</title>
   </head>
   <body>
     <noscript>
